# EN605.617.81.FA21_StephenSeo_DitheringProject

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
doxygen/: mainpage.md
src/: arg_parse.cc  arg_parse.h  image.cc  image.h  main.cc  opencl_handle.cc  opencl_handle.h  video.cc  video.h
